<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slp_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slplogin.SlpLoginFragment">

    <!-- TITLE -->
    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSizeTitleBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetable"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <!-- USERNAME -->
    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_username"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_text_view" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/draw_lastname_input"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text_view" />

    <!-- Password -->
    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_password"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/draw_lastname_input"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_view" />

    <!-- CREDENTIALS ERROR -->
    <androidx.cardview.widget.CardView
        android:id="@+id/credentials_wrong_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:cardBackgroundColor="?attr/colorPlanCancelled"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="1dp"
            android:text="@string/login_wrong_credentials"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/textSize" />

    </androidx.cardview.widget.CardView>

    <!-- CONFIRM BUTTON -->
    <android.widget.Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/draw_lastname_check"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/login_confirm"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Gebe hier die Anmeldedaten von selbstlernportal.de ein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>