<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/btn_student_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/card_background"
        android:text="@string/select_student"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/textSize"/>

    <!-- in case no student is selected -->
    <TextView
        android:id="@+id/no_student_selected_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_student_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="?attr/colorOnPrimaryDark"
        android:textSize="@dimen/textSizeTitle"
        android:text="@string/no_student_selected"
        android:textAlignment="center"/>

    <!-- In case there is a student selected -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:visibility="gone"
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_student_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="@dimen/scrollViewFadingEdgeLength">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="50dp">

                <!-- INFORMATION CARDS -->
                <com.johannes.llgplanv2.ui.InformationCardView
                    android:id="@+id/info_card_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <!-- QUICK PLAN -->
                <TextView
                    android:id="@+id/text_view_substitution_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/substitution_plan"
                    android:layout_marginTop="20dp"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/quick_plan_view_pager_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <!--androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/text_view_changed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/changed"
                        android:textSize="@dimen/textSize"
                        android:textColor="?attr/colorOnPrimary"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/text_view_canceled"/>
                    <TextView
                        android:id="@+id/text_view_canceled"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/canceled"
                        android:textSize="@dimen/textSize"
                        android:textColor="?attr/colorOnPrimary"
                        android:textAlignment="center"
                        android:layout_marginHorizontal="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/text_view_changed"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout-->

                <!-- EVENT LIST -->
                <TextView
                    android:id="@+id/text_view_event_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/events"
                    android:layout_marginTop="40dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/event_list_card_view"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="?attr/colorPrimary"
                    app:cardCornerRadius="@dimen/cardCornerRadius">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/event_list_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="15dp"/>
                </androidx.cardview.widget.CardView>



                <!-- TIMETABLE -->
                <TextView
                    android:id="@+id/text_view_timetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/timetable"
                    android:layout_marginTop="40dp"/>

                <com.johannes.llgplanv2.ui.TimetableView
                    android:id="@+id/timetable_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <!-- LAST UPDATED TEXT VIEWS -->
                <TextView
                    android:id="@+id/last_updated_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSizeTitle"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/last_updated"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:id="@+id/timetable_last_updated_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_marginHorizontal="15dp"
                    android:text="ERROR"/>
                <TextView
                    android:id="@+id/substitution_last_updated_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_marginHorizontal="15dp"
                    android:text="ERROR"/>
                <TextView
                    android:id="@+id/event_list_last_updated_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_marginHorizontal="15dp"
                    android:text="ERROR"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>